updated trainer profiles

--- a/about.html
+++ b/about.html
@@ -397,7 +397,7 @@
                 </div>
             </div>
             <div class="row">
-                <div class="col-sm-6">
+                <div class="col-sm-4">
                     <div class="team-member">
                         <img class="mx-auto rounded-circle" src="img/team/Rich Hansen.jpg" alt="" />
                         <h4>Dr. Rich Hanson</h4>
@@ -413,7 +413,7 @@
                         </p>
                     </div>
                 </div>
-                <div class="col-sm-6">
+                <div class="col-sm-4">
                     <div class="team-member">
                         <img class="mx-auto rounded-circle" src="img/team/Manfred.png" alt="" />
                         <h4>Manfred Molomo</h4>
@@ -431,11 +431,27 @@
                         </p>
                     </div>
                 </div>
+                <div class="col-sm-4">
+                    <div class="team-member">
+                        <img class="mx-auto rounded-circle" src="img/team/Tsige.jpg" alt="" />
+                        <h4>Tsigereda Yemane</h4>
+                        <p class="text-muted">Leadership Coach<br /></p>
+                        <p class="text-muted">
+                            My name is Tsigereda Yemane. I have been working with the Navigators since 1998 to date under different capacities.
+                            I have been involved in leading, training, equipping, mentoring and coaching the second generation of laborers to
+                            equip other younger leaders. I have completed the basic and advanced coaching training and practice coaching. I am
+                            working to be a certified coach by the International Coaching Federation (ICF) soon.
+                            I am a team mobilizer and player. I am dedicated and loyal to what I commit myself to do. I am also part of a team
+                            who facilitate Interpersonal skill training workshops. I have a bachelor of Arts in Bible and Theology and a
+                            Certificate in counseling skills.
+                        </p>
+                    </div>
+                </div>
             </div>
             <div class="row">
                 <div class="col-sm-4">
                     <div class="team-member">
-                        <img class="mx-auto rounded-circle" src="img/team/Ramzi.png" alt="" />
+                        <img class="mx-auto rounded-circle" src="img/team/Ramzi.jpg" alt="" />
                         <h4>Ramzi Abdurhaman</h4>
                         <p class="text-muted">Soft Skills Trainer</p>
                         <p class="text-muted">
@@ -506,7 +522,7 @@
                 </div>
                 <div class="col-sm-4">
                     <div class="team-member">
-                        <img class="mx-auto rounded-circle" src="img/team/Kidane.png" alt="" />
+                        <img class="mx-auto rounded-circle" src="img/team/Kidane.jpg" alt="" />
                         <h4>Kidane Gedefaw</h4>
                         <p class="text-muted">Soft Skills Trainer <br /></p>
                         <p class="text-muted">
