--- a/about.html
+++ b/about.html
@@ -451,7 +451,7 @@
             <div class="row">
                 <div class="col-sm-4">
                     <div class="team-member">
-                        <img class="mx-auto rounded-circle" src="img/team/Ramzi.jpg" alt="" />
+                        <img class="mx-auto rounded-circle" src="img/team/Ramzi2.jpg" alt="" />
                         <h4>Ramzi Abdurhaman</h4>
                         <p class="text-muted">Soft Skills Trainer</p>
                         <p class="text-muted">
@@ -522,7 +522,7 @@
                 </div>
                 <div class="col-sm-4">
                     <div class="team-member">
-                        <img class="mx-auto rounded-circle" src="img/team/Kidane.jpg" alt="" />
+                        <img class="mx-auto rounded-circle" src="img/team/Kidane2.jpg" alt="" />
                         <h4>Kidane Gedefaw</h4>
                         <p class="text-muted">Soft Skills Trainer <br /></p>
                         <p class="text-muted">
