removed old information from update section

--- a/index.html
+++ b/index.html
@@ -254,7 +254,7 @@
   </header>
 
   <!-- updates -->
-  <section class="page-section" id="updates">
+  <!-- <section class="page-section" id="updates">
     <div class="row">
       <div class="col-lg-12 text-center">
         <h2 class="section-heading text-uppercase">Updates</h2>
@@ -298,7 +298,6 @@
       </div>
       <div class="col-lg-7 col-md-10 mt-4 ">
         <h2> Fall 2024 Basic Coaching Course </h2>
-        <!-- <h5 class="text-muted">Values based education</h5> -->
         <p> <a href="https://www.leadercoachingnet.com/">Leadership Coaching Network</a>'s fall 2024 basic coaching course
           is
           launching on October 24. It will be a 21 hour course with 3 hours of virtual sessions every thursday starting
@@ -321,7 +320,7 @@
       </div>
     </div>
     </div>
-    </section>
+    </section> -->
 
   <section class="page-section" id="services">
     <div class="row">
