--- a/about.html
+++ b/about.html
@@ -403,13 +403,17 @@
                         <h4>Dr. Rich Hanson</h4>
                         <p class="text-muted">Leadership Coach</p>
                         <p class="text-muted">
-                            I am the founder of the Leadership Coaching Network. After a 40-year
-                            career as a church pastor, missionary and theology professor at the
-                            Ethiopian Graduate School of Theology (EGST) in Addis Ababa, I now
-                            serve as a Leadership Coach and Consultant helping African Christian
-                            leaders, NGO’s, teams, and denominations gain deeper clarity about
-                            their challenges and opportunities, develop a God-given vision, and
-                            make significant progress toward achieving their goals.
+                            I am a Professional Certified Coach, and hold the second-tier credential (PCC) offered by the International Coaching
+                            Federation (ICF). ICF is the worldwide “gold standard” of coaching excellence, with over 58,000 certified coaches in
+                            158 nations. In 2020 I founded the Leadership Coaching Network (LCN). Our mission is to “Empower African leaders
+                            as agents of transformation for individuals, organizations and society.” LCN is accredited by ICF’s rigorous
+                            standards for coaching training and certification. Since 2020, our “Coaching for Transformation” courses have
+                            trained over 400 African leaders in five countries, at a tiny fraction of the cost charged by ICF-certified
+                            organizations. In addition to leadership coaching training, I coach executive leaders and teams in schools, organizations, NGO’s,
+                            and denominations to gain deeper clarity about their challenges and opportunities, and make significant progress
+                            toward achieving their goals. My background is a 40-year career as a Senior Pastor (four US congregations), missionary and theology professor at
+                            the Ethiopian Graduate School of Theology (EGST) in Addis Ababa. My doctorate is from Fuller Theological Seminary,
+                            USA. I am excited to be partnering with Bridge as our LCN local contact in Ethiopia. For more information, please visit our website at <a href="https://www.leadercoachingnet.com">www.leadercoachingnet.com</a>
                         </p>
                     </div>
                 </div>
@@ -423,7 +427,7 @@
                             International Coaching Federation (ICF) with over a decade
                             experience helping individuals and teams achieve their goals. I'm
                             passionate about empowering my clients to unlock their
-                            potential and achieve meaningful resultsin both their personal
+                            potential and achieve meaningful results in both their personal
                             and professional lives. I help my clients gain clarity, set realistic
                             goals, and develop actionable plans to overcome obstacles and
                             achieve success. My primary area of expertise is integrating life,
