--- a/about.html
+++ b/about.html
@@ -400,7 +400,7 @@
                 <div class="col-sm-4">
                     <div class="team-member">
                         <img class="mx-auto rounded-circle" src="img/team/Rich Hansen.jpg" alt="" />
-                        <h4>Rev. Dr. Rich Hanson</h4>
+                        <h4>Rev. Dr. Rich Hansen</h4>
                         <p class="text-muted">Leadership Coach</p>
                         <p class="text-muted">
                             I am a Professional Certified Coach, and hold the second-tier credential (PCC) offered by the International Coaching
