--- a/gallery.html
+++ b/gallery.html
@@ -125,7 +125,7 @@
                 <li>
                     <a href="img/gallery/balcony view.jpg">
                         <figure>
-                            <img src='img/gallery/balcony view.jpg' alt='Volcano and lava field against a stormy sky'>
+                            <img src='img/gallery/balcony view.jpg' alt=''>
                             <figcaption>Balcony view from our venue</figcaption>
                         </figure>
                     </a>
@@ -134,8 +134,7 @@
                 <li>
                     <a href="img/gallery/certificates.jpg">
                         <figure>
-                            <img src='img/gallery/certificates.jpg'
-                                alt='Guy on a bike ok a wooden bridge with a forest backdrop'>
+                            <img src='img/gallery/certificates.jpg' alt=''>
                             <figcaption>Certificate after training</figcaption>
                         </figure>
                     </a>
@@ -144,7 +143,7 @@
                 <li>
                     <a href="img/gallery/energizers.jpg">
                         <figure>
-                            <img src='img/gallery/energizers.jpg' alt='Person standing alone in a misty forest'>
+                            <img src='img/gallery/energizers.jpg' alt=''>
                             <figcaption>Retreat: energizers</figcaption>
                         </figure>
                     </a>
@@ -153,8 +152,7 @@
                 <li>
                     <a href="img/gallery/role playing.jpg">
                         <figure>
-                            <img src='img/gallery/role playing.jpg'
-                                alt='Fashionable-looking girl with blond hair and pink sunglasses'>
+                            <img src='img/gallery/role playing.jpg' alt=''>
                             <figcaption>Role playing</figcaption>
                         </figure>
                     </a>
@@ -163,8 +161,7 @@
                 <li>
                     <a href="img/gallery/rooftop activity.jpg">
                         <figure>
-                            <img src='img/gallery/rooftop activity.jpg'
-                                alt='Fashionable-looking girl with blond hair and pink sunglasses'>
+                            <img src='img/gallery/rooftop activity.jpg' alt=''>
                             <figcaption>Rooftop activity at our venue</figcaption>
                         </figure>
                     </a>
@@ -173,8 +170,7 @@
                 <li>
                     <a href="img/gallery/playing dart.jpg">
                         <figure>
-                            <img src='img/gallery/playing dart.jpg'
-                                alt='Person hiking on a trail through mountains while taking a photo with phone'>
+                            <img src='img/gallery/playing dart.jpg' alt=''>
                             <figcaption>Retreat: playing dart</figcaption>
                         </figure>
                     </a>
@@ -183,8 +179,7 @@
                 <li>
                     <a href="img/gallery/playing island board.jpg">
                         <figure>
-                            <img src='img/gallery/playing island board.jpg'
-                                alt='Street scene with person walking and others on motorbikes, all wearing masks'>
+                            <img src='img/gallery/playing island board.jpg' alt=''>
                             <figcaption>Retreat: playing island board</figcaption>
                         </figure>
                     </a>
@@ -193,8 +188,7 @@
                 <li>
                     <a href="img/gallery/playing volleyball.jpg">
                         <figure>
-                            <img src='img/gallery/playing volleyball.jpg'
-                                alt='Fashionable-looking girl with blond hair and pink sunglasses'>
+                            <img src='img/gallery/playing volleyball.jpg' alt=''>
                             <figcaption>Retreat: playing volleyball</figcaption>
                         </figure>
                     </a>
@@ -203,8 +197,7 @@
                 <li>
                     <a href="img/gallery/simon and delilah game.jpg">
                         <figure>
-                            <img src='img/gallery/simon and delilah game.jpg'
-                                alt='Fashionable-looking girl with blond hair and pink sunglasses'>
+                            <img src='img/gallery/simon and delilah game.jpg' alt=''>
                             <figcaption>Retreat: playing samson & delilah</figcaption>
                         </figure>
                     </a>
