Revert "image alt text fix"
This reverts commit 5222597f7d80ef88d2cb3555c5e9852cae600d36.

--- a/gallery.html
+++ b/gallery.html
@@ -125,7 +125,7 @@
                 <li>
                     <a href="img/gallery/balcony view.jpg">
                         <figure>
-                            <img src='img/gallery/balcony view.jpg' alt=''>
+                            <img src='img/gallery/balcony view.jpg' alt='Volcano and lava field against a stormy sky'>
                             <figcaption>Balcony view from our venue</figcaption>
                         </figure>
                     </a>
@@ -134,7 +134,8 @@
                 <li>
                     <a href="img/gallery/certificates.jpg">
                         <figure>
-                            <img src='img/gallery/certificates.jpg' alt=''>
+                            <img src='img/gallery/certificates.jpg'
+                                alt='Guy on a bike ok a wooden bridge with a forest backdrop'>
                             <figcaption>Certificate after training</figcaption>
                         </figure>
                     </a>
@@ -143,7 +144,7 @@
                 <li>
                     <a href="img/gallery/energizers.jpg">
                         <figure>
-                            <img src='img/gallery/energizers.jpg' alt=''>
+                            <img src='img/gallery/energizers.jpg' alt='Person standing alone in a misty forest'>
                             <figcaption>Retreat: energizers</figcaption>
                         </figure>
                     </a>
@@ -152,7 +153,8 @@
                 <li>
                     <a href="img/gallery/role playing.jpg">
                         <figure>
-                            <img src='img/gallery/role playing.jpg' alt=''>
+                            <img src='img/gallery/role playing.jpg'
+                                alt='Fashionable-looking girl with blond hair and pink sunglasses'>
                             <figcaption>Role playing</figcaption>
                         </figure>
                     </a>
@@ -161,7 +163,8 @@
                 <li>
                     <a href="img/gallery/rooftop activity.jpg">
                         <figure>
-                            <img src='img/gallery/rooftop activity.jpg' alt=''>
+                            <img src='img/gallery/rooftop activity.jpg'
+                                alt='Fashionable-looking girl with blond hair and pink sunglasses'>
                             <figcaption>Rooftop activity at our venue</figcaption>
                         </figure>
                     </a>
@@ -170,7 +173,8 @@
                 <li>
                     <a href="img/gallery/playing dart.jpg">
                         <figure>
-                            <img src='img/gallery/playing dart.jpg' alt=''>
+                            <img src='img/gallery/playing dart.jpg'
+                                alt='Person hiking on a trail through mountains while taking a photo with phone'>
                             <figcaption>Retreat: playing dart</figcaption>
                         </figure>
                     </a>
@@ -179,7 +183,8 @@
                 <li>
                     <a href="img/gallery/playing island board.jpg">
                         <figure>
-                            <img src='img/gallery/playing island board.jpg' alt=''>
+                            <img src='img/gallery/playing island board.jpg'
+                                alt='Street scene with person walking and others on motorbikes, all wearing masks'>
                             <figcaption>Retreat: playing island board</figcaption>
                         </figure>
                     </a>
@@ -188,7 +193,8 @@
                 <li>
                     <a href="img/gallery/playing volleyball.jpg">
                         <figure>
-                            <img src='img/gallery/playing volleyball.jpg' alt=''>
+                            <img src='img/gallery/playing volleyball.jpg'
+                                alt='Fashionable-looking girl with blond hair and pink sunglasses'>
                             <figcaption>Retreat: playing volleyball</figcaption>
                         </figure>
                     </a>
@@ -197,7 +203,8 @@
                 <li>
                     <a href="img/gallery/simon and delilah game.jpg">
                         <figure>
-                            <img src='img/gallery/simon and delilah game.jpg' alt=''>
+                            <img src='img/gallery/simon and delilah game.jpg'
+                                alt='Fashionable-looking girl with blond hair and pink sunglasses'>
                             <figcaption>Retreat: playing samson & delilah</figcaption>
                         </figure>
                     </a>
