--- a/index.html
+++ b/index.html
@@ -169,6 +169,33 @@
     @media only screen and (max-width: 400px) {
       .client_list {
         width: 1500%;
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
       }
     }
   </style>
@@ -638,10 +665,29 @@
           </a>
           <div class="portfolio-caption">
             <h4>Soft skills training</h4>
-            <p class="text-muted">Unlocking your potential</p>
+            <p class="text-muted">Working at your best with others</p>
             <a href="flyer/course_list.pdf">
               <button type="button" class="btn btn-success mt-3" style="background-color: black">
                 List of our courses
+              </button>
+            </a>
+          </div>
+        </div>
+        <div class="col-md-4 col-sm-6 portfolio-item" style="text-align: center">
+          <a class="portfolio-link" data-toggle="modal" href="#portfolioModal5">
+            <div class="portfolio-hover">
+              <div class="portfolio-hover-content">
+                <i class="fas fa-plus fa-3x"></i>
+              </div>
+            </div>
+            <img class="img-fluid-portfolio" src="img/portfolio/coaching_2.png" alt="" />
+          </a>
+          <div class="portfolio-caption">
+            <h4>Coaching</h4>
+            <p class="text-muted">Unlocking your potential</p>
+            <a data-toggle="modal" href="#portfolioModal5">
+              <button type="button" class="btn btn-success mt-3" style="background-color: black">
+                Detail
               </button>
             </a>
           </div>
@@ -724,25 +770,6 @@
             <h4>Intercultural skills<br/>training</h4>
             <p class="text-muted">being your best self</p>
             <a data-toggle="modal" href="#portfolioModal4">
-              <button type="button" class="btn btn-success mt-3" style="background-color: black">
-                Detail
-              </button>
-            </a>
-          </div>
-        </div>
-        <div class="col-md-4 col-sm-6 portfolio-item" style="text-align: center">
-          <a class="portfolio-link" data-toggle="modal" href="#portfolioModal5">
-            <div class="portfolio-hover">
-              <div class="portfolio-hover-content">
-                <i class="fas fa-plus fa-3x"></i>
-              </div>
-            </div>
-            <img class="img-fluid-portfolio" src="img/partners/CCO2.png" alt="" style="padding: 15px;" />
-          </a>
-          <div class="portfolio-caption">
-            <h4>Culture Connector</h4>
-            <p class="text-muted">Explore cultural differences in a new way</p>
-            <a data-toggle="modal" href="#portfolioModal5">
               <button type="button" class="btn btn-success mt-3" style="background-color: black">
                 Detail
               </button>
@@ -1423,6 +1450,14 @@
                   empathetically, building trust, familiarity and collegiality.<br /> <br />
                   This<strong> 1-day course </strong>will help you ‘be you at your best’ wherever the context, in
                   business conversations and meetings, interacting with colleagues, customers and clients. <br /> <br />
+
+                  <a href="https://www.cultureconnector.com"><strong>CultureConnector</strong></a> </br>
+                
+                  We are partnered with CultureConnector. It is an independent UK-based business focused on
+                  one thing only: providing online solutions for the development of intercultural competence. It is now firmly established
+                  as the leading cultural assessment and learning platform, recognised by universities, major corporations, NGOs and renowned
+                  public institutions across the world.
+                </div>
                 </div>
               </div>
             </div>
@@ -1432,7 +1467,7 @@
     </div>
 
     <!-- Modal 5 -->
-    <div class="portfolio-modal modal fade" id="portfolioModal5" tabindex="-1" role="dialog" aria-hidden="true">
+   <div class="portfolio-modal modal fade" id="portfolioModal5" tabindex="-1" role="dialog" aria-hidden="true">
       <div class="modal-dialog">
         <div class="modal-content">
           <div class="close-modal" data-dismiss="modal">
@@ -1444,16 +1479,49 @@
             <div class="row">
               <div class="col-lg-8 mx-auto">
                 <div class="modal-body" style="text-align: left">
-                  <h4>CultureConnector</h4>
-                  <span class="text-muted">Explore cultural differences in a new way </span><br /><br />
-                
-                  <a href="https://www.cultureconnector.com">CultureConnector</a> is an independent UK-based business focused on
-                  one thing only: providing online solutions for the development of intercultural competence. It is now firmly established
-                  as the leading cultural assessment and learning platform, recognised by universities, major corporations, NGOs and renowned
-                  public institutions across the world.
+                  <h4>Coaching</h4>
+                  <span class="text-muted">unlocking your potential</span><br /><br />
+                  We have certified Life and Leadership Coaches who are members of International Coaching Federation
+                  (ICF). Most of them have more than a decade’s experience helping individuals and teams achieve their goals.
+                  We have coaches based in different parts of the world.<br /><br /> We offer the coaching via zoom or face to
+                  face in our office in Gurd Shola. We offer one on one, group and team coaching in the following areas: Life
+                  and Leadership Coaching, Coaching, Financial Coaching and Transition Coaching.<br /><br />
                 </div>
               </div>
             </div>
+            <div class="row justify-content-center body mb-4">
+              <ul class="col-lg-7 image-grid">
+                  <li>
+                    <figure>
+                      <img src='img/gallery/programs/coaching/01.jpg' alt=''>
+                    </figure>
+                  </li>
+                  <li>
+                    <figure>
+                      <img src='img/gallery/programs/coaching/02.jpg' alt=''>
+                    </figure>
+                  </li>
+                  <li>
+                    <figure>
+                      <img src='img/gallery/programs/coaching/03.jpg' alt=''>
+                    </figure>
+                  </li>
+                  <li>
+                    <figure>
+                      <img src='img/gallery/programs/coaching/04.jpg' alt=''>
+                    </figure>
+                  </li>
+              </ul>
+            </div> 
+            <div class="row justify-content-center body mb-4">
+              <ul class="col-lg-7 image-grid">
+                  <li>
+                    <figure>
+                      <img style="aspect-ratio: 4 / 2;" src='img/gallery/programs/coaching/05.jpg' alt=''>
+                    </figure>
+                  </li>
+              </ul>
+            </div> 
           </div>
         </div>
       </div>
@@ -1499,6 +1567,44 @@
                 </div>
               </div>
             </div>
+            <div class="row justify-content-center body mb-4">
+              <ul class="col-lg-7 image-grid"  style="grid-template-columns: auto auto auto auto;">
+                  <li>
+                    <figure>
+                      <img style="aspect-ratio: 2 / 4;" src='img/gallery/programs/RC/01.JPG' alt=''>
+                    </figure>
+                  </li>
+                  <li>
+                    <figure>
+                      <img style="aspect-ratio: 2 / 4;" src='img/gallery/programs/RC/02.JPG' alt=''>
+                    </figure>
+                  </li>
+                  <li>
+                    <figure>
+                      <img style="aspect-ratio: 2 / 4;" src='img/gallery/programs/RC/03.JPG' alt=''>
+                    </figure>
+                  </li>
+                  <li>
+                    <figure>
+                      <img style="aspect-ratio: 2 / 4;" src='img/gallery/programs/RC/04.JPG' alt=''>
+                    </figure>
+                  </li>
+              </ul>
+            </div> 
+            <div class="row justify-content-center body mb-4">
+              <ul class="col-lg-7 image-grid">
+                  <li>
+                    <figure>
+                      <img src='img/gallery/programs/RC/07.JPG' alt=''>
+                    </figure>
+                  </li>
+                  <li>
+                    <figure>
+                      <img src='img/gallery/programs/RC/08.JPG' alt=''>
+                    </figure>
+                  </li>
+              </ul>
+            </div> 
           </div>
         </div>
       </div>
@@ -1556,6 +1662,30 @@
                 </div>
               </div>
             </div>
+            <div class="row justify-content-center body mb-4">
+              <ul class="col-lg-7 image-grid">
+                  <li>
+                    <figure>
+                      <img src='img/gallery/programs/School Leadership/01.JPG' alt=''>
+                    </figure>
+                  </li>
+                  <li>
+                    <figure>
+                      <img src='img/gallery/programs/School Leadership/02.JPG' alt=''>
+                    </figure>
+                  </li>
+                  <li>
+                    <figure>
+                      <img src='img/gallery/programs/School Leadership/03.JPG' alt=''>
+                    </figure>
+                  </li>
+                  <li>
+                    <figure>
+                      <img src='img/gallery/programs/School Leadership/04.JPG' alt=''>
+                    </figure>
+                  </li>
+              </ul>
+            </div> 
           </div>
         </div>
       </div>
