smaller portfolio images

--- a/index.html
+++ b/index.html
@@ -1493,31 +1493,31 @@
               <ul class="col-lg-7 image-grid">
                   <li>
                     <figure>
-                      <img src='img/gallery/programs/coaching/01.jpg' alt=''>
+                      <img src='img/gallery/programs/coaching/a.jpg' alt=''>
                     </figure>
                   </li>
                   <li>
                     <figure>
-                      <img src='img/gallery/programs/coaching/02.jpg' alt=''>
+                      <img src='img/gallery/programs/coaching/b.jpg' alt=''>
                     </figure>
                   </li>
                   <li>
                     <figure>
-                      <img src='img/gallery/programs/coaching/03.jpg' alt=''>
+                      <img src='img/gallery/programs/coaching/c.jpg' alt=''>
                     </figure>
                   </li>
                   <li>
                     <figure>
-                      <img src='img/gallery/programs/coaching/04.jpg' alt=''>
+                      <img src='img/gallery/programs/coaching/d.jpg' alt=''>
                     </figure>
                   </li>
               </ul>
             </div> 
             <div class="row justify-content-center body mb-4">
-              <ul class="col-lg-7 image-grid">
+              <ul class="col-lg-7 image-grid ml-3">
                   <li>
                     <figure>
-                      <img style="aspect-ratio: 4 / 2;" src='img/gallery/programs/coaching/05.jpg' alt=''>
+                      <img style="aspect-ratio: 4 / 2;" src='img/gallery/programs/coaching/e.jpg' alt=''>
                     </figure>
                   </li>
               </ul>
@@ -1571,22 +1571,22 @@
               <ul class="col-lg-7 image-grid"  style="grid-template-columns: auto auto auto auto;">
                   <li>
                     <figure>
-                      <img style="aspect-ratio: 2 / 4;" src='img/gallery/programs/RC/01.JPG' alt=''>
+                      <img style="aspect-ratio: 2 / 4;" src='img/gallery/programs/RC/a.JPG' alt=''>
                     </figure>
                   </li>
                   <li>
                     <figure>
-                      <img style="aspect-ratio: 2 / 4;" src='img/gallery/programs/RC/02.JPG' alt=''>
+                      <img style="aspect-ratio: 2 / 4;" src='img/gallery/programs/RC/b.JPG' alt=''>
                     </figure>
                   </li>
                   <li>
                     <figure>
-                      <img style="aspect-ratio: 2 / 4;" src='img/gallery/programs/RC/03.JPG' alt=''>
+                      <img style="aspect-ratio: 2 / 4;" src='img/gallery/programs/RC/c.JPG' alt=''>
                     </figure>
                   </li>
                   <li>
                     <figure>
-                      <img style="aspect-ratio: 2 / 4;" src='img/gallery/programs/RC/04.JPG' alt=''>
+                      <img style="aspect-ratio: 2 / 4;" src='img/gallery/programs/RC/d.JPG' alt=''>
                     </figure>
                   </li>
               </ul>
@@ -1595,12 +1595,12 @@
               <ul class="col-lg-7 image-grid">
                   <li>
                     <figure>
-                      <img src='img/gallery/programs/RC/07.JPG' alt=''>
+                      <img src='img/gallery/programs/RC/e.JPG' alt=''>
                     </figure>
                   </li>
                   <li>
                     <figure>
-                      <img src='img/gallery/programs/RC/08.JPG' alt=''>
+                      <img src='img/gallery/programs/RC/f.JPG' alt=''>
                     </figure>
                   </li>
               </ul>
@@ -1666,22 +1666,22 @@
               <ul class="col-lg-7 image-grid">
                   <li>
                     <figure>
-                      <img src='img/gallery/programs/School Leadership/01.JPG' alt=''>
+                      <img src='img/gallery/programs/School Leadership/a.JPG' alt=''>
                     </figure>
                   </li>
                   <li>
                     <figure>
-                      <img src='img/gallery/programs/School Leadership/02.JPG' alt=''>
+                      <img src='img/gallery/programs/School Leadership/b.JPG' alt=''>
                     </figure>
                   </li>
                   <li>
                     <figure>
-                      <img src='img/gallery/programs/School Leadership/03.JPG' alt=''>
+                      <img src='img/gallery/programs/School Leadership/c.JPG' alt=''>
                     </figure>
                   </li>
                   <li>
                     <figure>
-                      <img src='img/gallery/programs/School Leadership/04.JPG' alt=''>
+                      <img src='img/gallery/programs/School Leadership/d.JPG' alt=''>
                     </figure>
                   </li>
               </ul>
