homepage intro and navigation changes

--- a/blog.html
+++ b/blog.html
@@ -71,8 +71,7 @@
                             <div class="drop-down-btn align-self-center">
                                 <i class="fa fa-caret-down drop-icon" id="di1" onclick="dropFunction1()"></i>
                                 <div class="drop-down-content drop-down-shrink" id="dc1">
-                                    <a class="js-scroll-trigger" href="index.html#services">Programs</a>
-                                    <a class="js-scroll-trigger" href="index.html#portfolio">Portfolio</a>
+                                    <a class="js-scroll-trigger" href="index.html#portfolio">Programs</a>
                                     <a class="js-scroll-trigger" href="index.html#client">Clients</a>
                                     <a class="js-scroll-trigger" href="index.html#partner">Partners</a>
                                     <a class="js-scroll-trigger" href="index.html#testimonials">Testimonials</a>
@@ -80,8 +79,7 @@
                             </div>
                         </div>
                         <div class="drop-down-content drop-down-shrink display-drop">
-                            <a class="js-scroll-trigger" href="index.html#services">Programs</a>
-                            <a class="js-scroll-trigger" href="index.html#portfolio">Portfolio</a>
+                            <a class="js-scroll-trigger" href="index.html#portfolio">Programs</a>
                             <a class="js-scroll-trigger" href="index.html#client">Clients</a>
                             <a class="js-scroll-trigger" href="index.html#partner">Partners</a>
                             <a class="js-scroll-trigger" href="index.html#testimonials">Testimonials</a>
