--- a/about.html
+++ b/about.html
@@ -57,8 +57,7 @@
                             <div class="drop-down-btn align-self-center">
                                 <i class="fa fa-caret-down drop-icon" id="di1" onclick="dropFunction1()"></i>
                                 <div class="drop-down-content drop-down-shrink" id="dc1">
-                                    <a class="js-scroll-trigger" href="index.html#services">Programs</a>
-                                    <a class="js-scroll-trigger" href="index.html#portfolio">Portfolio</a>
+                                    <a class="js-scroll-trigger" href="index.html#portfolio">Programs</a>
                                     <a class="js-scroll-trigger" href="index.html#client">Clients</a>
                                     <a class="js-scroll-trigger" href="index.html#partner">Partners</a>
                                     <a class="js-scroll-trigger" href="index.html#testimonials">Testimonials</a>
@@ -66,8 +65,7 @@
                             </div>
                         </div>
                         <div class="drop-down-content drop-down-shrink display-drop">
-                            <a class="js-scroll-trigger" href="index.html#services">Programs</a>
-                            <a class="js-scroll-trigger" href="index.html#portfolio">Portfolio</a>
+                            <a class="js-scroll-trigger" href="index.html#portfolio">Programs</a>
                             <a class="js-scroll-trigger" href="index.html#client">Clients</a>
                             <a class="js-scroll-trigger" href="index.html#partner">Partners</a>
                             <a class="js-scroll-trigger" href="index.html#testimonials">Testimonials</a>
@@ -337,7 +335,7 @@
             </div>
 
             <div class="row">
-                <div class="col-sm-4">
+                <div class="col-sm-6">
                     <div class="team-member">
                         <img class="mx-auto rounded-circle" src="img/team/melkamu.jpg" alt="" />
                         <h4>Melkamu Ayalew</h4>
@@ -353,7 +351,7 @@
                         </p>
                     </div>
                 </div>
-                <div class="col-sm-4">
+                <!-- <div class="col-sm-4">
                     <div class="team-member">
                         <img class="mx-auto rounded-circle" src="img/team/eden.jpg" alt="" />
                         <h4>Eden Debebe</h4>
@@ -375,8 +373,8 @@
                             Ethiopian international ministry.
                         </p>
                     </div>
-                </div>
-                <div class="col-sm-4">
+                </div> -->
+                <div class="col-sm-6">
                     <div class="team-member">
                         <img class="mx-auto rounded-circle" src="img/team/biftu.jpg" alt="" />
                         <h4>Biftu Solomon</h4>
@@ -390,7 +388,7 @@
                             and informative for all our users. I design and source
                             content for our newsletters, flyers and posters
                             I also co-facilitate training which I enjoy very much and look
-                            forward to every opportunity
+                            forward to every opportunity.
                         </p>
                     </div>
                 </div>
