--- a/blogs/Learning for your Team - the Bitesize Option.html
+++ b/blogs/Learning for your Team - the Bitesize Option.html
@@ -257,14 +257,14 @@
                         </div>
                     </div>
 
-                    <hr class="col-lg-9 solid">
+                    <!-- <hr class="col-lg-9 solid">
                     <div class="col-lg-12 col-md-6">
                         <h2 class="blog-subheading">
                             Our Next Public Course
                         </h2><br />
                         <h5>Active listening skills</h5>
                         <img class="img-fluid" src="/flyer/active listening-web.png" alt="active listening" />
-                    </div>
+                    </div> -->
 
                     <hr class="col-lg-9 solid">
                     <div class="col-lg-12">
