--- a/blogs/Learning with your Team - the Awayday.html
+++ b/blogs/Learning with your Team - the Awayday.html
@@ -276,7 +276,7 @@
                         </div>
                     </div>
 
-                    <hr class="col-lg-9 solid">
+                    <!-- <hr class="col-lg-9 solid">
                     <div class="col-lg-12 col-md-6">
                         <h2 class="blog-subheading">
                             Our Next Public Course
@@ -284,7 +284,7 @@
                         <br />
                         <h5>Active listening skills</h5>
                         <img class="img-fluid" src="/flyer/active listening-web.png" alt="active listening" />
-                    </div>
+                    </div> -->
 
                     <hr class="col-lg-9 solid">
                     <div class="col-lg-12">
