--- a/index.html
+++ b/index.html
@@ -343,7 +343,7 @@
             a tailored
             made English language programs for a specific role. Catering to individuals, groups, and organizations
             across the
-            public, NGO, and commercial sectors, we offers programs that are stretching, motivating, and tailored to
+            public, NGO, and commercial sectors, we offer programs that are stretching, motivating, and tailored to
             individuals.
             As a social responsibility, we run a Reading Champions program designed to promote reading for pleasure by
             helping
